<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tennis_Tracker_Projet</string>
    <string name="navigation_drawer_open">Ouvrir navigation drawer</string>
    <string name="navigation_drawer_close">Fermer navigation drawer</string>
    <string name="nav_header_title">Votre profil</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">En tête avigation</string>
    <string name="action_settings">Paramètres</string>

    <string name="menu_home">Accueil</string>
    <string name="new_matches">Nouveaux Matchs</string>
    <string name="previous_matches">Précédents Matches</string>
    <string name="menu_tools">Langue</string>
    <string name="menu_share">Partage</string>
    <string name="menu_send">Envoyer</string>
    <string name="menu_pictures">Photos</string>
    <string name="title_activity_new_matche">Nouveaux Matchs</string>
    <string name="title_activity_previous_matches">Précédents Matchs Activity</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="joueur1">Nom joueur 1</string>
    <string name="joueur2">Nom joueur 2</string>
    <string name="format_match">Format du match</string>
    <string name="format_dernier_set">Format du dernier set</string>
    <string name="type_coup">type de coups</string>
    <string name="save">Sauvegarder</string>
    <string name="title_activity_take_picture">Prendre une photo</string>
    <string name="choose_a_language">Choisir une langue</string>
    <string name="capture">Capture</string>
    <string name="add_a_new_match">Add a new match</string>
    <string name="title_activity_score_counter">ScoreCounterActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>