<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tennis_tracker_project.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_new_matches"
        android:name="com.example.tennis_tracker_project.NewMatcheFragment"
        android:label="@string/new_matches"
        tools:layout="@layout/fragment_new_match" />

    <fragment
        android:id="@+id/nav_previous_matches"
        android:name="com.example.tennis_tracker_project.PreviousMatchFragment"
        android:label="@string/previous_matches"
        tools:layout="@layout/fragment_previous_match" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.tennis_tracker_project.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.tennis_tracker_project.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>